2004-11-15 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
  * src/gdcmFile.cxx : now delete the PixelConvert instance.
  * In examples and tests : change the type of image data variables from void*
    to uint8_t*. Remmove all delete on image data variables

2004-11-10 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
  * src/gdcmDocument.cxx : Set the file pointer TP to 0 in the constructors.
    Verify the file pointer value before open the file, and if it's not null,
    a verbose message is generated.
    Close correctly the file when the file isn't considered dicom-like. The
    correctly close is a call to CloseFile.
    When closing the file pointer, test if its not null to close the file.
  * src/gdcmPixelConvert.cxx : bug fix for the SIEMENS_GBS_III-16-ACR_NEMA_1.acr
    file. For an uncompressed image, the copied datas correspond in the least 
    case to the image size (calculated) or the image size specified in the 
    header. A verbose is generated if these two size mismatch

2004-11-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
  * Test/TestAllReadCompareDicom.cxx : test the existence of the directory
    using an 'ifstream' other than a 'FILE *'. The previous solution ('FILE *')
    break under windows (with msvc6 compilation).

2004-11-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
  * src/gdcmDicomDir.h : bug fix for the last Boix's commit (problem when
    compiling with MSVC6)

2004-11-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
  * Bugs fix for the Windows build with VC6
  * CMakeLists.txt : bug fix - The include of the VTK lib is made only when it's
    needed (only for projects required VTK). If the VTK is included in all
    projects, there is conflicts with the jpeg lib of vtk when compiling the
    gdcmjpeg[8,12,16] projects. The first conflict is on the jmorecfg.h file.
  * src/gdcmUtil.h : export binary_write methods. Otherwise, there's problems